raffia/tests/error/scss/at-rule/use/url.snap
---
source: raffia/tests/error.rs
---
error: string is expected
  ┌─ url.scss:1:6
  │
1 │ @use foo;
  │      ^^^


